Fixed background glitch on safari mobile view

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -59,6 +59,7 @@ a {
   justify-content: flex-start;
   align-content: flex-start;
   align-items: flex-start;
+  height: 100vh;
   @media (max-width: 650px) {
     position: absolute;
     display: flex;
